force-app/main/default/objects/Offset__c/Offset__c.object-meta.xml
<CustomObject>
    <label>Offset</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offsets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>